[gd_scene load_steps=8 format=3 uid="uid://codf6k0w3eg3b"]

[ext_resource type="Script" path="res://src/properties/shape/PropShape.gd" id="1_k1y2r"]
[ext_resource type="Script" path="res://src/widgets/ValSlider.gd" id="1_xvpfu"]
[ext_resource type="Script" path="res://src/widgets/PivotSelector.gd" id="3_aa2sk"]
[ext_resource type="Texture2D" uid="uid://b1qb3w0fbex5y" path="res://assets/icons/fill.png" id="4_12qpj"]
[ext_resource type="Script" path="res://src/widgets/IconToggleBtn.gd" id="5_upybj"]
[ext_resource type="Texture2D" uid="uid://b35kvc6k0x7pk" path="res://assets/icons/as-square.png" id="6_680io"]
[ext_resource type="Texture2D" uid="uid://dk8upmu6qj7ib" path="res://assets/icons/from-center.png" id="7_fempb"]

[node name="Shape" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_k1y2r")

[node name="title" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"title"
text = "Shape Tool"
horizontal_alignment = 1

[node name="divider" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"HDivider"

[node name="StrokeWidth" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
theme_type_variation = &"ValSlider"
min_value = 1.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_xvpfu")
prefix = "Size:"
suffix = "px"

[node name="holder" type="HSeparator" parent="."]
layout_mode = 2

[node name="row" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="column" type="VBoxContainer" parent="row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_position" type="Label" parent="row/column"]
layout_mode = 2
text = "Position"

[node name="PosX" type="SpinBox" parent="row/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
prefix = "X:"

[node name="PosY" type="SpinBox" parent="row/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
prefix = "Y:"

[node name="v-holder" type="VSeparator" parent="row"]
layout_mode = 2

[node name="column-2" type="VBoxContainer" parent="row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_size" type="Label" parent="row/column-2"]
layout_mode = 2
text = "Size"

[node name="Width" type="SpinBox" parent="row/column-2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2

[node name="Height" type="SpinBox" parent="row/column-2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2

[node name="holder3" type="HSeparator" parent="."]
layout_mode = 2

[node name="row2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="column" type="VBoxContainer" parent="row2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="label_pivot" type="Label" parent="row2/column"]
layout_mode = 2
text = "Pivot"

[node name="OptPivot" type="Control" parent="row2/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("3_aa2sk")
pivot_point_radius = 6

[node name="column2" type="VBoxContainer" parent="row2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="label_options" type="Label" parent="row2/column2"]
layout_mode = 2
text = "Options"

[node name="row" type="HBoxContainer" parent="row2/column2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="OptFill" type="Button" parent="row2/column2/row"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Fill"
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("4_12qpj")
icon_alignment = 1
script = ExtResource("5_upybj")

[node name="OptAsSquare" type="Button" parent="row2/column2/row"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "As Square"
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("6_680io")
icon_alignment = 1
script = ExtResource("5_upybj")

[node name="OptFromCenter" type="Button" parent="row2/column2/row"]
unique_name_in_owner = true
modulate = Color(0.411765, 0.411765, 0.411765, 1)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "From Center"
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("7_fempb")
icon_alignment = 1
script = ExtResource("5_upybj")

[node name="bottom" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
